improve coin generation and use non-deprecated URL for highscore