@@ -10,6 +10,7 @@ import java.io.BufferedReader;
 import java.io.IOException;
 import java.io.InputStreamReader;
 import java.net.HttpURLConnection;
+import java.net.URI;
 import java.net.URL;
 import java.util.List;
 
@@ -44,7 +45,7 @@ public class HighScoreTable {
         HttpURLConnection connection = null;
 
         try {
-            URL url = new URL("http://vps.mariol03.es:8081/get-highscore-table");
+            URL url = new URI("http://vps.mariol03.es:8081/get-highscore-table").toURL();
             connection = (HttpURLConnection) url.openConnection();
             connection.setRequestMethod("GET");
             connection.connect();
